// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dot matches snapshot for active dot 1`] = `
<View
  accessibilityRole="tab"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 10,
      "left": 6,
      "right": 6,
      "top": 10,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 20,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderRadius": 3,
          "height": 6,
        },
      ]
    }
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderRadius": 3,
          "height": 6,
        },
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 20,
        },
      ]
    }
  />
</View>
`;

exports[`Dot matches snapshot for inactive dot 1`] = `
<View
  accessibilityRole="tab"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 10,
      "left": 6,
      "right": 6,
      "top": 10,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "opacity": 0.35,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 6,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderRadius": 3,
          "height": 6,
        },
      ]
    }
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderRadius": 3,
          "height": 6,
        },
        {
          "opacity": 0.35,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 6,
        },
      ]
    }
  />
</View>
`;
